# teaching

./: CMakeLists.txt  alignment_file_conversion.cpp  alignment_file_conversion_short.cpp  concat_identical_sequence_ids.cpp  count_unknowns.cpp  count_unknowns.py  file_conversion.py  ident_seq.py  sam_to_bam.sh  sequence_file_conversion.cpp  sequence_file_conversion_short.cpp  test_commit.txt  translate_dna_to_aminoacids.py  translate_nucleotides_to_protein.cpp
data/: bam1.bam  ident_seq.fasta  input-test.sam  mult_align.bam  seq.fastq  test2.fasta  test2_to_prot.fasta
